--- a/style.css
+++ b/style.css
@@ -50,6 +50,7 @@ text-align:center;
     background-color: #fff;
     padding:2rem;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    border-radius: 5px;
  
 }
 
@@ -109,6 +110,7 @@ img{
     font-size: 14px;
     margin: 4px 2px;
     cursor: pointer;
+    border-radius: 5px;
 }
 
 @media only screen and (max-width:750px){
